                  now 2.2 times slower than with Sicstus.  This was done by
                  more clever encoding of the data.
                - Made the SWI Prolog version even faster: it turns out using
                  the recorded data base is even more expensive than frequent
                  decompilation of clauses (especially for the auxiliary
                  data).  The code that uses the internal database is still
                  available, in case it should come in handy in future
                  porting efforts.
                - Used essence_hook/2 to make verifier.tlp run the difficult
                  examples due to Brian W. DeVries.

10 September 2009 (same version, i.e., 0.94 (beta))
                - The previous release was not good for cyclic terms, because
                  the new implementation of variant/2 did not handle them
                  correctly.  This has been fixed, but Eclipse essentially
                  cannot handle cyclic terms now.
                - SWI Prolog must use the recorded database if it is to handle
                  cyclic terms.  This makes it 2.5 times slower than Sicstus
                  on XSB/ham.

28 September 2009, version 0.95 (beta)
                - Take advantage of variant/2 in SWI Prolog (which is
                  correctly implemented since version 5.7.15).
                - Various small changes to bring DRA up on YAP.

30 November 2009, version 0.96 (beta):
                - Improved treatment of variants and instances (thanks to advice
                  by Ulrich Neumerkel).

 8 June 2010 (same version):
                - Fixed an error in clause checker (found by Abramo Bagnara).
                  Proper checking of singletons in DCG rules (not used in these
                  metainterpreters).  A few other minor improvements, not worth
                  bumping the version counter.

-------------------------------------------------------------------------------