@@ -147,6 +147,18 @@ copy_term2( Term, Copy ) :-
 
 
 %%------------------------------------------------------------------------------
+%% are_variants( + term, + term ) :
+%%    Succeeds only if both arguments are variants of each other.
+%%    Does not instantiate any variables.
+%% NOTE: In Eclipse this loops on cyclic terms.
+
+are_variants( T1, T2 ) :-
+        check( T1 = T2 ),                     % quickly weed out obvious misfits
+        copy_term( T2, CT2 ),
+        variant( T1, CT2 ).
+
+
+%%------------------------------------------------------------------------------
 %% write_shallow( + output stream, + term, + maximum depth ):
 %% Like write/2, but only to a limited print depth.
 
